--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,6 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "angular-resource": "~1.2.0",
-    "angular-i18n": "~1.2.x"
+    "angular-translate": "~1.2.x"
   }
 }
