--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "angular-resource": "~1.2.0",
-    "angular-translate": "~2.4.2"
+    "angular-translate": "~2.4.2",
+    "angular-translate-storage-local": "~2.4.2",
+    "angular-translate-storage-cookie": "~2.4.2"
   }
 }
