--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-resource": "~1.2.0",
     "angular-translate": "~2.4.2",
     "angular-translate-storage-local": "~2.4.2",
-    "angular-translate-storage-cookie": "~2.4.2"
+    "angular-translate-storage-cookie": "~2.4.2",
+    "angular-cookies":  "~1.2.0"
   }
 }
