--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,6 @@
     "angular-translate": "~2.4.2",
     "angular-translate-storage-local": "~2.4.2",
     "angular-translate-storage-cookie": "~2.4.2",
-    "angular-cookies":  "~1.2.0"
+    "angular-cookies":  "latest"
   }
 }
