finger swipe in photo

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-translate": "latest",
     "angular-translate-storage-local": "latest",
     "angular-translate-storage-cookie": "latest",
-    "angular-cookies":  "latest"
+    "angular-cookies":  "latest",
+    "angular-touch": "latest",
   }
 }
