--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,6 @@
     "angular-translate-storage-local": "latest",
     "angular-translate-storage-cookie": "latest",
     "angular-cookies":  "latest",
-    "angular-touch": "latest",
+    "angular-touch": "latest"
   }
 }
